# SimpleGraphicsLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md  main.cpp
examples/HelloTriangle/: CMakeLists.txt  HelloTriangle.cpp  HelloTriangle.h  main.cpp
examples/ImGuiTriangle/: CMakeLists.txt  ImGuiTriangle.cpp  ImGuiTriangle.h  main.cpp
examples/TexturedQuad/: CMakeLists.txt  TexturedQuad.cpp  TexturedQuad.h  main.cpp
examples/VertexBuffers/: CMakeLists.txt  README.md  VertexBuffers.cpp  VertexBuffers.h  main.cpp
libs/: README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: README.md
src/SGL/: SGL.cpp  SGL.h  pch.h
src/SGL/Application/: Application.cpp  Application.h  Window.h
src/SGL/core/: Application.cpp  Application.h  Assert.h  Base.h  Log.cpp  Log.h  Profile.cpp  Profile.h  ProfileTimer.h  Timer.h  Timestep.h  Utils.cpp  Utils.h  Window.cpp  Window.h
src/SGL/opengl/: BufferLayout.cpp  BufferLayout.h  CubeMapTexture.cpp  CubeMapTexture.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  ShaderObject.cpp  ShaderObject.h  Texture2D.cpp  Texture2D.h  Texture2DArray.cpp  Texture2DArray.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
test/: README.md
